--- a/assets/scss/_section__about.scss
+++ b/assets/scss/_section__about.scss
@@ -31,20 +31,20 @@
       font-size: 24px;
     }
 
-    &:after {
-      content: '';
-      width: 400px;
-      height: 400px;
-      background: radial-gradient(circle, #f70003 0%, rgba(255, 255, 255, 0) 50%);
-      opacity: 0.8;
-      border-radius: 200px;
-      overflow: hidden;
-      pointer-events: none;
-      position: absolute;
-      left: 50%;
-      bottom: 100%;
-      transform: translate(-50%, 44%);
-    }
+    // &:after {
+    //   content: '';
+    //   width: 400px;
+    //   height: 400px;
+    //   background: radial-gradient(circle, #f70003 0%, rgba(255, 255, 255, 0) 50%);
+    //   opacity: 0.8;
+    //   border-radius: 200px;
+    //   overflow: hidden;
+    //   pointer-events: none;
+    //   position: absolute;
+    //   left: 50%;
+    //   bottom: 100%;
+    //   transform: translate(-50%, 44%);
+    // }
   }
 }
 
@@ -82,5 +82,65 @@
 
   img {
     width: 100%;
+  }
+}
+
+@media (max-width: 1279px) {
+  .about-list {
+    gap: 20px;
+
+    li {
+      gap: 24px;
+      p {
+        font-size: 18px;
+      }
+    }
+  }
+
+  .yandex-small {
+    width: 56px;
+    height: 56px;
+    right: auto;
+    left: 200px;
+  }
+}
+
+@media (max-width: 1023px) {
+  .section--about {
+    padding: 80px 0px 80px 0px;
+  }
+
+  .about-list {
+    gap: 0px;
+    li {
+      width: 50%;
+      gap: 24px;
+      justify-content: flex-start;
+      align-content: center;
+      align-items: center;
+      text-align: center;
+      margin-bottom: 50px;
+      p {
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .section--about {
+    padding: 40px 0px 80px 0px;
+  }
+
+  .about-list {
+    li {
+      gap: 22px;
+      width: 100%;
+      justify-content: flex-start;
+      margin-bottom: 50px;
+      &:last-child {
+        margin-bottom: 0px;
+      }
+    }
   }
 }
