--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -27,6 +27,9 @@
   &.title--h3 {
     font-size: 32px;
     line-height: 1.12;
+    @media (max-width: 1279px) {
+      font-size: 30px;
+    }
   }
   &.title--h4 {
     font-size: 30px;
