--- a/assets/scss/_secsion__garanty.scss
+++ b/assets/scss/_secsion__garanty.scss
@@ -86,3 +86,38 @@
     max-width: 1000px;
   }
 }
+
+@media (max-width: 1279px) {
+  .section--garanty .container {
+    max-width: 768px;
+  }
+  .garanty-prizes article .image {
+    width: 232px;
+    height: 217px;
+  }
+  .garanty-prizes article p {
+    font-size: 22px;
+    span {
+      font-size: 16px;
+    }
+  }
+}
+
+@media (max-width: 1023px) {
+  .section--garanty .container {
+    max-width: 680px;
+  }
+}
+
+@media (max-width: 767px) {
+  .section--garanty {
+    padding: 100px 0px 80px 0px;
+  }
+  .garanty-prizes {
+    margin-top: 50px;
+    gap: 80px;
+    li {
+      margin: 0 auto;
+    }
+  }
+}
