--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -17,7 +17,7 @@ body.locked {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   z-index: 1000;
   overflow-x: hidden;
   overflow-y: scroll;
