--- a/assets/scss/_section__about.scss
+++ b/assets/scss/_section__about.scss
@@ -2,6 +2,27 @@
   padding: 80px 0px 120px 0px;
   z-index: 4;
   overflow: visible;
+  &:before {
+    content: '';
+    width: 100%;
+    height: 338px;
+    background: url('../img/svg/hero-bottom.svg') no-repeat left top;
+    background-size: 100% 100%;
+    position: absolute;
+    left: 0px;
+    top: -120px;
+    z-index: 0;
+    @media (max-width: 1023px) {
+      height: 230px;
+      top: -110px;
+    }
+    @media (max-width: 767px) {
+      background: url('../img/svg/hero-bottom.svg') no-repeat left top;
+      background-size: 100% 100%;
+      height: 100px;
+      top: -95px;
+    }
+  }
 }
 
 .about-list {
@@ -30,21 +51,6 @@
       font-family: var(--4);
       font-size: 24px;
     }
-
-    // &:after {
-    //   content: '';
-    //   width: 400px;
-    //   height: 400px;
-    //   background: radial-gradient(circle, #f70003 0%, rgba(255, 255, 255, 0) 50%);
-    //   opacity: 0.8;
-    //   border-radius: 200px;
-    //   overflow: hidden;
-    //   pointer-events: none;
-    //   position: absolute;
-    //   left: 50%;
-    //   bottom: 100%;
-    //   transform: translate(-50%, 44%);
-    // }
   }
 }
 
