--- a/assets/scss/_section__hero.scss
+++ b/assets/scss/_section__hero.scss
@@ -37,6 +37,9 @@
   top: 0px;
   pointer-events: none;
   overflow: hidden;
+  @media (max-width: 767px) {
+    min-width: 1180px;
+  }
   img {
     width: 100%;
   }
@@ -76,11 +79,15 @@
 }
 
 .section--chees {
-  background: var(--bg);
+  background: rgba(0, 0, 0, 0);
   overflow: visible;
   height: 70px;
+  z-index: 5;
   .scroll-down {
-    display: none;
+    display: block;
+    position: absolute;
+    z-index: 4;
+    pointer-events: all;
   }
   .container {
     height: 100%;
@@ -240,7 +247,7 @@
   .section--hero {
     &:before {
       padding-top: 0%;
-      min-height: 650px;
+      min-height: 600px;
     }
     .container {
       padding-top: 90px;
@@ -253,22 +260,16 @@
     .container {
       max-width: 375px;
     }
-    .scroll-down {
-      display: block;
-      position: absolute;
-      z-index: 4;
-      pointer-events: all;
-    }
   }
 
   .hero-background {
-    transform: translate(-170px, 30px);
+    transform: translate(-150px, 30px);
   }
 
   .main-prize {
     padding: 18px 58px;
     bottom: 14px;
-    transform: translate(10px, 0px);
+    transform: translate(10px, -10px);
     span {
       font-size: 9px;
     }
@@ -291,13 +292,13 @@
 
   .loaded {
     .hero-chees {
-      transform: translate(-85%, -30px);
+      transform: translate(-85%, -42px);
     }
   }
 
   .hero-chees {
     width: 220px;
-    transform: translate(-185%, -30px);
+    transform: translate(-185%, -42px);
   }
 
   .hero-center-image {
@@ -306,9 +307,5 @@
     bottom: 10px;
     left: 50%;
     transform: translate(-28%, 0%);
-  }
-
-  .scroll-down {
-    display: none;
   }
 }
