--- a/assets/scss/_section__winners.scss
+++ b/assets/scss/_section__winners.scss
@@ -161,9 +161,28 @@
 @media (max-width: 1023px) {
   .section--winners {
     padding: 80px 0px;
-    background: #000102 url('../img/winners.webp') no-repeat center top;
+    background: #000102;
     background-size: auto 100svh;
     background-attachment: fixed;
+
+    .fixed-bg {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 640px;
+      z-index: 0;
+      pointer-events: none;
+      z-index: -1;
+      clip-path: inset(0);
+      background: url('../img/winners.webp') no-repeat center center/cover;
+    }
+
+    &.fix {
+      .fixed-bg {
+        position: fixed;
+      }
+    }
   }
 
   .winners-filters {
