--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -74,8 +74,7 @@ span.input-icon {
   pointer-events: none;
 }
 
-.input,
-.textarea {
+.input {
   width: 100%;
   height: var(--input-height);
   background: var(--input-background);
@@ -90,18 +89,10 @@ span.input-icon {
   transition: 0.3s;
   box-shadow: none;
   resize: none;
-  &.input--select {
-    padding-right: var(--input-height);
-    height: 56px;
-    border-radius: 16px;
-    font-family: var(--4);
-    font-size: 20px;
-    padding-right: 56px;
-    cursor: pointer;
 
-    @media (max-width: 1023px) {
-      font-size: 16px;
-    }
+  &.input--textarea {
+    height: 88px;
+    padding: 10px 18px;
   }
 
   &.input-search {
@@ -383,4 +374,9 @@ select.open + .input-icon {
 
 .label-for-file.loaded::after {
   background-image: url('');
+}
+
+.select {
+  display: block;
+  position: relative;
 }
