--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -501,3 +501,31 @@ body.locked {
     font-size: 16px;
   }
 }
+
+#callback,
+#callback-success {
+  .popup-title {
+    color: var(--white);
+    font-family: var(--4);
+    font-size: 24px;
+    text-transform: uppercase;
+  }
+
+  .success-text {
+    display: flex;
+    position: relative;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    font-family: var(--4);
+    font-size: 20px;
+    margin: 20px auto;
+
+    strong {
+      color: var(--yellow);
+      font-size: 30px;
+    }
+  }
+}
