--- a/assets/scss/_secsion__garanty.scss
+++ b/assets/scss/_secsion__garanty.scss
@@ -16,7 +16,28 @@
   align-items: center;
   align-content: center;
   gap: 40px;
-  margin-top: 70px;
+  margin-top: 50px;
+
+  li {
+    position: relative;
+    padding-top: 150px;
+    .title {
+      position: absolute;
+      left: 50%;
+      top: 0px;
+      transform: translate(-50%, 0%);
+    }
+    @media (max-width: 1023px) {
+      padding-top: 110px;
+      .title {
+        font-size: 30px;
+      }
+    }
+
+    @media (max-width: 767px) {
+      width: 100%;
+    }
+  }
 
   article {
     display: flex;
@@ -114,7 +135,7 @@
     padding: 100px 0px 80px 0px;
   }
   .garanty-prizes {
-    margin-top: 50px;
+    margin-top: 0px;
     gap: 80px;
     li {
       margin: 0 auto;
