--- a/assets/scss/_section__winners.scss
+++ b/assets/scss/_section__winners.scss
@@ -11,6 +11,22 @@
       max-width: 450px;
     }
   }
+
+  .input {
+    &.input--select {
+      padding-right: var(--input-height);
+      height: 56px;
+      border-radius: 16px;
+      font-family: var(--4);
+      font-size: 20px;
+      padding-right: 56px;
+      cursor: pointer;
+
+      @media (max-width: 1023px) {
+        font-size: 16px;
+      }
+    }
+  }
 }
 
 .winners-filters {
