--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -126,6 +126,23 @@ a {
   color: var(--yellow);
 }
 
+.border {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 52px;
+  z-index: 5;
+  pointer-events: none;
+  &.border-top,
+  &.border-top-red,
+  &.border-top-invers {
+    margin-bottom: -51px;
+  }
+  &.border-bottom {
+    margin-top: -51px;
+  }
+}
+
 .border-bottom,
 .border-bottom-invers,
 .border-top-invers,
