--- a/assets/scss/_section__mainprize.scss
+++ b/assets/scss/_section__mainprize.scss
@@ -1,8 +1,15 @@
 .section--mainprize {
   padding: 150px 0px;
-  background: url('../img/mainprize-bg.webp') no-repeat left center;
-  background-size: auto 100%;
-  background-attachment: fixed;
+  clip-path: inset(0);
+
+  .fixed-bg {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100svw;
+    height: 100%;
+    background: url('../img/mainprize-bg.webp') no-repeat center center/cover;
+  }
 
   .title {
     max-width: 660px;
