--- a/assets/scss/_section__winners.scss
+++ b/assets/scss/_section__winners.scss
@@ -1,9 +1,17 @@
 .section--winners {
   padding: 100px 0px;
   min-height: 650px;
-  background: var(--bg) url('../img/winners.webp') no-repeat left center;
-  background-size: auto 100%;
-  background-attachment: fixed;
+
+  clip-path: inset(0);
+
+  .fixed-bg {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100svw;
+    height: 100%;
+    background: url('../img/winners.webp') no-repeat center center/cover;
+  }
 
   .container {
     max-width: 868px;
