--- a/assets/scss/_forms.scss
+++ b/assets/scss/_forms.scss
@@ -9,6 +9,10 @@
   --invalid: var(--yellow);
 }
 
+fieldset {
+  border: 0;
+}
+
 .form {
   display: flex;
   flex-wrap: wrap;
@@ -201,6 +205,7 @@ textarea {
       display: inline;
       width: auto;
       margin: 0;
+      text-align: left;
     }
     &:before {
       content: '';
