--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -247,8 +247,13 @@ body.locked {
     position: absolute;
     top: 0%;
     transform: translate(0%, -110%);
-    @media (max-width: 767px) {
+  }
+  @media (max-width: 767px) {
+    .title--h4 {
       font-size: 24px;
+      position: relative;
+      transform: translate(0%, 0%);
+      padding-bottom: 10px;
     }
   }
 }
@@ -259,9 +264,9 @@ body.locked {
   overflow: hidden;
 
   .accordeon {
-    @for $i from 1 through 10 {
+    @for $i from 1 through 15 {
       &:nth-child(#{$i}) {
-        background: rgba(255, 255, 255, ($i - 1) * 0.1);
+        background: rgba(255, 255, 255, ($i - 1) * 0.03);
       }
     }
   }
