--- a/assets/scss/_section__lk.scss
+++ b/assets/scss/_section__lk.scss
@@ -42,9 +42,9 @@
       th,
       td {
         &:first-child {
-          padding-left: 60px;
+          padding-left: 30px;
           @media (max-width: 1279px) {
-            padding-left: 20px;
+            padding-left: 0px;
           }
           @media (max-width: 767px) {
             padding-left: 0px;
@@ -53,16 +53,20 @@
         &:nth-child(3) {
           white-space: initial;
           max-width: 300px;
+          @media (max-width: 767px) {
+            white-space: wrap;
+          }
+        }
+        &:nth-child(4) {
+          @media (max-width: 767px) {
+            white-space: wrap;
+          }
         }
         &:last-child {
-          padding-right: 60px;
-          max-width: 170px;
+          padding-right: 20px;
+          max-width: 160px;
           white-space: nowrap;
           @media (max-width: 1279px) {
-            padding-right: 20px;
-            white-space: initial;
-          }
-          @media (max-width: 767px) {
             padding-right: 0px;
             white-space: initial;
           }
@@ -83,6 +87,26 @@
     tbody {
       td {
         border-bottom: 1px solid var(--white);
+        &:nth-child(2) {
+          @media (max-width: 767px) {
+            padding: 0;
+            img {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+
+    .button {
+      margin: 0;
+      font-size: 18px;
+      padding: 10px 22px;
+      min-height: 24px;
+      border-radius: 12px;
+      @media (max-width: 1279px) {
+        font-size: 12px;
+        padding: 5px 12px;
       }
     }
   }
