--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1348,6 +1348,10 @@ a {
     font-size: 15px;
   }
 }
+.accordeon .answer .answer__content p a,
+.accordeon .answer .answer__content li a {
+  text-decoration: underline;
+}
 .accordeon .answer .answer__content ul {
   display: flex;
   width: 100%;
@@ -3423,20 +3427,20 @@ body.locked {
   gap: 20px;
   margin: 50px auto 60px auto;
 }
-.winners-filters > .label {
-  max-width: 240px;
+.winners-filters .label {
+  max-width: 278px;
 }
 @media (max-width: 1023px) {
-  .winners-filters > .label {
+  .winners-filters .label {
     width: 100%;
     max-width: 100%;
   }
 }
-.winners-filters > .label .input-icon {
+.winners-filters .label .input-icon {
   height: 56px;
   width: 56px;
 }
-.winners-filters > .label .input-icon svg {
+.winners-filters .label .input-icon svg {
   width: 14px;
   height: 8px;
 }
@@ -3583,7 +3587,7 @@ body.locked {
     gap: 12px;
     margin: 30px auto 40px auto;
   }
-  .winners-filters > .label {
+  .winners-filters .label {
     max-width: 100%;
     position: relative;
   }
