--- a/assets/scss/_accordeons.scss
+++ b/assets/scss/_accordeons.scss
@@ -69,6 +69,9 @@
         @media (max-width: 767px) {
           font-size: 15px;
         }
+        a {
+          text-decoration: underline;
+        }
       }
 
       ul {
