--- a/assets/scss/_section__winners.scss
+++ b/assets/scss/_section__winners.scss
@@ -48,8 +48,8 @@
   gap: 20px;
   margin: 50px auto 60px auto;
 
-  > .label {
-    max-width: 240px;
+  .label {
+    max-width: 278px;
     @media (max-width: 1023px) {
       width: 100%;
       max-width: 100%;
@@ -214,7 +214,7 @@
     gap: 12px;
     margin: 30px auto 40px auto;
 
-    > .label {
+    .label {
       max-width: 100%;
       position: relative;
     }
